creusot/tests/should_fail/prusti/blocked_lifetime/implied.stderr
error[creusot]: Invalid dereference
 --> implied.rs:4:12
  |
4 | #[ensures(*x == 0u32)]
  |            ^

error: aborting due to previous error

